<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="209dp"
        android:layout_marginLeft="209dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button3" />

    <TextView
        android:id="@+id/donorReg"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="435dp"
        android:text="@string/donorReg"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="374dp"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enterPhone"
        android:layout_width="296dp"
        android:layout_height="46dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="317dp"
        android:ems="10"
        android:hint="@string/enterPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="296dp"
        android:layout_height="46dp"

        android:layout_alignStart="@+id/enterName"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="261dp"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="203dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/enterAddress"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:hint="@string/enterAddress"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enterBloodGroup"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="373dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/enterBloodGroup"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="441dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button" />
</RelativeLayout>