<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchLoc"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="270dp"
        android:ems="10"
        android:hint="@string/Enteraddress"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/searchBlood"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="208dp"
        android:ems="10"
        android:hint="@string/EnterBloodGroup"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/searchBox"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="139dp"
        android:text="@string/Search" />


    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="203dp"
        android:layout_marginRight="203dp"
        android:layout_marginBottom="74dp"
        android:text="@string/RegisterasDonor" />

    <Button
        android:id="@+id/Setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="201dp"
        android:layout_marginLeft="201dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="72dp"
        android:text="@string/SetDonationEvent" />

    <Button
        android:id="@+id/changelang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="413dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ChangeLanguage" />

    <Button
        android:id="@+id/showDonor"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/showDonor" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="121dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        app:srcCompat="@drawable/blood" />

    <Button
        android:id="@+id/showBloodBank"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="9dp"
        android:text="@string/bloodbank" />


</RelativeLayout>